syntax = "proto3";

option go_package = "./pb";

import "person_message.proto";
import "filter_message.proto";

message CreatePersonRequest {
  Person person = 1;
}

message CreatePersonResponse {
  string person_id = 1;
}

message SearchPersonRequest {
  Filter filter = 1;
}

message SearchPersonResponse {
  Person person = 1;
}

service PersonService {
  rpc CreatePerson(CreatePersonRequest) returns (CreatePersonResponse) {};
  rpc SearchPerson(SearchPersonRequest) returns (stream SearchPersonResponse) {};
}